WIP: restructure projects section

--- a/src/template.html
+++ b/src/template.html
@@ -36,7 +36,7 @@
     </header>
     <main class="relative z-0 pt-[35px] lg:pt-[100px]">
       <section
-        class="grid items-start gap-x-[40px] px-[20px] pb-35 xl:min-h-[calc(100vh-100px)] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] xl:pb-0"
+        class="grid min-h-[calc(100vh-35px)] items-start gap-x-[40px] px-[20px] pb-35 xl:min-h-[calc(100vh-100px)] xl:grid-flow-col xl:grid-cols-[2fr_1fr] xl:grid-rows-2 xl:px-[150px] xl:pb-0"
         id="about"
       >
         <h2 class="flex flex-col self-center">
@@ -78,107 +78,7 @@
         <h2 class="line mb-10">Featured Projects</h2>
         <div>
           <article>
-            <div class="video-wrapper">
-              <div id="mini-drive"></div>
-            </div>
-            <h4>Mini Drive</h4>
-            <p>
-              This project is a simplified Google Drive alternative that lets
-              users securely upload, manage, and share files and folders. It
-              supports authentication, file and folder operations, size
-              tracking, and organized hierarchies, with features like folder
-              sharing with expiration dates and validation to ensure
-              reliability.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-nodejs-plain"></i> Node.js</div>
-              <div><i class="devicon-express-original"></i> Express</div>
-              <div><i class="devicon-prisma-original"></i> Prisma ORM</div>
-              <div><i class="devicon-postgresql-plain"></i> PostgreSQL</div>
-              <div><i class="devicon-supabase-plain"></i> Supabase</div>
-              <div><i class="devicon-passport-plain"></i> Passport.js</div>
-              <div><i class="devicon-typescript-plain"></i> TypeScript</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-              <div class="center-icon">
-                <img
-                  class="white-icon"
-                  src="./assets/ejs-svgrepo-com.svg"
-                  alt="Icon"
-                />
-                EJS
-              </div>
-            </div>
-            <div>
-              <a
-                href="https://gofhilman-file-uploader.koyeb.app/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/file-uploader"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="project-inventory"></div>
-            </div>
-            <h4>Hilman's Project Inventory</h4>
-            <p>
-              Hilman's Project Inventory is a web application designed to
-              showcase and manage a collection of projects. It allows users to
-              view project details, filter projects by categories, languages,
-              and tools, and perform CRUD operations on the projects. The
-              application is built with a focus on simplicity, usability, and
-              scalability.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-nodejs-plain"></i> Node.js</div>
-              <div><i class="devicon-express-original"></i> Express</div>
-              <div><i class="devicon-postgresql-plain"></i> PostgreSQL</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-              <div class="center-icon">
-                <img
-                  class="white-icon"
-                  src="./assets/ejs-svgrepo-com.svg"
-                  alt="Icon"
-                />
-                EJS
-              </div>
-            </div>
-            <div>
-              <a
-                href="https://inventory-application-production-d04e.up.railway.app/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/inventory-application"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="shopshop"></div>
-            </div>
+            <img src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1757752826/22_mx9z69.png" alt="Project screenshot">
             <h4>ShopShop</h4>
             <p>
               A mock shopping website built as a Single-Page Application (SPA)
@@ -226,46 +126,6 @@
           </article>
           <article>
             <div class="video-wrapper">
-              <div id="cvgen"></div>
-            </div>
-            <h4>CVGen</h4>
-            <p>
-              This is a React-based CV application that allows users to create
-              and preview their CVs dynamically. Users can input their personal,
-              educational, and professional details, and the application
-              provides a live preview of the CV. The application also supports
-              theme customization.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-react-original"></i> React</div>
-              <div>
-                <i class="devicon-tailwindcss-original"></i> Tailwind CSS
-              </div>
-              <div><i class="devicon-vitejs-plain"></i> Vite</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-            </div>
-            <div>
-              <a
-                href="https://cv-application-epd.pages.dev/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/cv-application"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
               <div id="battleship"></div>
             </div>
             <h4>Battleship Game</h4>
@@ -294,113 +154,6 @@
               </a>
               <a
                 href="https://github.com/gofhilman/battleship"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="weather-app"></div>
-            </div>
-            <h4>WeatherApp</h4>
-            <p>
-              WeatherApp allows users to search for weather information, pin
-              locations, and view detailed weather forecasts. It features
-              dynamic backgrounds, unit toggling, and real-time updates for an
-              interactive user experience.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-webpack-plain"></i> Webpack</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-            </div>
-            <div>
-              <a
-                href="https://gofhilman.github.io/weather-app/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/weather-app"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="todo-list"></div>
-            </div>
-            <h4>To Do List</h4>
-            <p>
-              The To Do List application is a task management tool designed to
-              help users organize their daily activities, prioritize tasks, and
-              keep track of deadlines. It allows users to create projects, add
-              tasks, set priorities, and manage task completion efficiently. The
-              application is built with a focus on simplicity and usability,
-              making it an ideal choice for personal productivity.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-webpack-plain"></i> Webpack</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-            </div>
-            <div>
-              <a
-                href="https://gofhilman.github.io/todo-list/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/todo-list"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div><i class="devicon-github-original"></i> Source</div>
-              </a>
-            </div>
-          </article>
-          <article>
-            <div class="video-wrapper">
-              <div id="meater"></div>
-            </div>
-            <h4>Restaurant Page</h4>
-            <p>
-              Meater is a restaurant website that provides users with an
-              interactive experience to explore the restaurant's menu, contact
-              details, and opening hours. The website is built with modular
-              JavaScript and styled for a clean and modern look.
-            </p>
-            <div class="project-tools">
-              <div><i class="devicon-webpack-plain"></i> Webpack</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
-            </div>
-            <div>
-              <a
-                href="https://gofhilman.github.io/restaurant-page/"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                <div class="center-icon">
-                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
-                  View live
-                </div>
-              </a>
-              <a
-                href="https://github.com/gofhilman/restaurant-page"
                 target="_blank"
                 rel="noopener noreferrer"
               >
