feat: add carousel

--- a/src/template.html
+++ b/src/template.html
@@ -78,7 +78,41 @@
         <h2 class="line mb-10">Featured Projects</h2>
         <div>
           <article>
-            <img src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1757752826/22_mx9z69.png" alt="Project screenshot">
+            <div class="embla">
+              <div class="embla__viewport">
+                <div class="embla__container">
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1757752826/22_mx9z69.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771234562/Screenshot_2026-02-16_163534_jpe86x.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771234561/Screenshot_2026-02-16_163147_wgekiw.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                </div>
+              </div>
+              <div class="embla__buttons">
+                <img
+                  src="assets/square-chevron-left.svg"
+                  alt=""
+                  class="embla__prev"
+                  width="40"
+                />
+                <img
+                  src="assets/square-chevron-right.svg"
+                  alt=""
+                  class="embla__next"
+                  width="40"
+                />
+              </div>
+            </div>
             <h4>ShopShop</h4>
             <p>
               A mock shopping website built as a Single-Page Application (SPA)
