WIP: add more projects

--- a/src/template.html
+++ b/src/template.html
@@ -102,14 +102,12 @@
                 <img
                   src="assets/square-chevron-left.svg"
                   alt=""
-                  class="embla__prev"
-                  width="40"
+                  class="embla__prev w-8 lg:w-10"
                 />
                 <img
                   src="assets/square-chevron-right.svg"
                   alt=""
-                  class="embla__next"
-                  width="40"
+                  class="embla__next w-8 lg:w-10"
                 />
               </div>
             </div>
@@ -159,8 +157,38 @@
             </div>
           </article>
           <article>
-            <div class="video-wrapper">
-              <div id="battleship"></div>
+            <div class="embla">
+              <div class="embla__viewport">
+                <div class="embla__container">
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1757752823/18_n0eokh.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771236867/Screenshot_2026-02-16_171147_kafyvo.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771236866/Screenshot_2026-02-16_171401_gpcipq.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                </div>
+              </div>
+              <div class="embla__buttons">
+                <img
+                  src="assets/square-chevron-left.svg"
+                  alt=""
+                  class="embla__prev w-8 lg:w-10"
+                />
+                <img
+                  src="assets/square-chevron-right.svg"
+                  alt=""
+                  class="embla__next w-8 lg:w-10"
+                />
+              </div>
             </div>
             <h4>Battleship Game</h4>
             <p>
@@ -198,10 +226,10 @@
         </div>
         <a
           class="contact-button mt-15 block self-center bg-slate-500 text-xl font-medium text-white transition-all duration-300 ease-in-out hover:scale-105 hover:bg-slate-600 lg:text-3xl"
-          href="https://inventory-application-production-d04e.up.railway.app/?page=1"
+          href="https://project-inventory.up.railway.app/"
           target="_blank"
           rel="noopener noreferrer"
-          >See all projects</a
+          >See other projects</a
         >
       </section>
       <section class="separator pb-20" id="skills">
