fix: complete reworking homepage

--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,8 @@
           class="my-10 border-l-10 border-slate-500 px-10 py-5 text-base/normal lg:text-lg/normal xl:mr-30 xl:text-xl/normal"
         >
           I'm a software and data engineer, passionate about building scalable
-          applications and robust data pipelines with clean architecture.
+          applications and robust data pipelines with clean architecture and
+          DevOps practices.
         </p>
         <div
           class="flex flex-col items-center gap-[80px] justify-self-center xl:row-span-full xl:mt-[130px] xl:gap-[100px]"
@@ -77,6 +78,102 @@
       <section class="separator flex flex-col pb-20" id="projects">
         <h2 class="line mb-10">Featured Projects</h2>
         <div>
+          <article>
+            <div class="embla">
+              <div class="embla__viewport">
+                <div class="embla__container">
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174339_tjeccf.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174514_c8c4mg.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174222_g0xaa5.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                  <img
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174255_vks9ue.png"
+                    alt=""
+                    class="embla__slide"
+                  />
+                </div>
+              </div>
+              <div class="embla__buttons">
+                <img
+                  src="assets/square-chevron-left.svg"
+                  alt=""
+                  class="embla__prev w-8 lg:w-10"
+                />
+                <img
+                  src="assets/square-chevron-right.svg"
+                  alt=""
+                  class="embla__next w-8 lg:w-10"
+                />
+              </div>
+            </div>
+            <h4>Blog API</h4>
+            <p>
+              Blog API is a fullstack blog application built from scratch. It
+              consists of a back end serving as the Content Management System
+              (CMS) and two frontend Single Page Applications (SPAs): the blog
+              itself and an admin dashboard for managing the blog. The
+              application focuses on core features while maintaining a polished
+              and minimalist design.
+            </p>
+            <div class="project-tools">
+              <div><i class="devicon-nodejs-plain"></i> Node.js</div>
+              <div><i class="devicon-express-original"></i> Express</div>
+              <div><i class="devicon-postgresql-plain"></i> PostgreSQL</div>
+              <div><i class="devicon-prisma-original"></i> Prisma ORM</div>
+              <div><i class="devicon-passport-plain"></i> Passport.js</div>
+              <div class="center-icon">
+                <img
+                  class="white-icon"
+                  src="./assets/cloudinary-free-logo_svgstack_com_28081766118907.svg"
+                  alt="Icon"
+                />Cloudinary
+              </div>
+              <div><i class="devicon-reactrouter-plain"></i> React Router</div>
+              <div><i class="devicon-react-original"></i> React</div>
+              <div>
+                <i class="devicon-tailwindcss-original"></i> Tailwind CSS
+              </div>
+              <div><i class="devicon-vitejs-plain"></i> Vite</div>
+              <div class="center-icon">
+                <img
+                  class="white-icon"
+                  src="./assets/shadcn-ui-seeklogo.svg"
+                  alt="Icon"
+                />
+                shadcn/ui
+              </div>
+            </div>
+            <div>
+              <a
+                href="https://shopping-cart-b3g.pages.dev/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div class="center-icon">
+                  <img class="big-icon" src="./assets/web-box.svg" alt="Icon" />
+                  View live
+                </div>
+              </a>
+              <a
+                href="https://github.com/gofhilman/shopping-cart"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <div><i class="devicon-github-original"></i> Source</div>
+              </a>
+            </div>
+          </article>
           <article>
             <div class="embla">
               <div class="embla__viewport">
@@ -111,7 +208,7 @@
                 />
               </div>
             </div>
-            <h4>ShopShop</h4>
+            <h4>Shopping Cart</h4>
             <p>
               A mock shopping website built as a Single-Page Application (SPA)
               using React Router. Users can browse products, add them to a cart,
@@ -126,7 +223,6 @@
               </div>
               <div><i class="devicon-vitejs-plain"></i> Vite</div>
               <div><i class="devicon-vitest-plain"></i> Vitest</div>
-              <div><i class="devicon-javascript-plain"></i> JavaScript</div>
               <div class="center-icon">
                 <img
                   class="white-icon"
@@ -233,19 +329,29 @@
         >
       </section>
       <section class="separator pb-20" id="skills">
-        <h2>Current Skills</h2>
+        <h2>Skills</h2>
         <p
           class="mx-10 mt-6 border-l-4 border-slate-500 py-1 pl-5 text-base lg:mx-30 lg:text-xl"
         >
-          I build responsive and accessible web apps with clean architecture and
-          dynamic interfaces, using modern frameworks and core technologies. My
-          workflow includes Git, testing, debugging, and scalable backend
-          development with relational databases, authentication, MVC patterns,
-          ORM tools, and APIs. I focus on performance, maintainability, and
-          thoughtful design across devices and users.
+          I focus on clean architecture and modern infrastructure from API
+          design to pipeline workflows while integrating DevOps practices.
+          Proficient at breaking down complexity into clear, sustainable, and
+          well‑architected solutions.
         </p>
         <h3>Programming languages</h3>
         <div>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg"
+            />
+            <figcaption>SQL</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-original.svg"
+            />
+            <figcaption>Bash</figcaption>
+          </figure>
           <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg"
@@ -260,15 +366,15 @@
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg"
-            />
-            <figcaption>SQL</figcaption>
-          </figure>
-          <figure>
-            <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg"
             />
             <figcaption>Python</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/go/go-original.svg"
+            />
+            <figcaption>Go</figcaption>
           </figure>
           <figure>
             <img
@@ -283,17 +389,13 @@
             <figcaption>MATLAB</figcaption>
           </figure>
           <figure>
-            <img src="./assets/icons8-wolfram-mathematica-color-100.png" />
-            <figcaption>Mathematica</figcaption>
-          </figure>
-          <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/fortran/fortran-original.svg"
             />
             <figcaption>Fortran</figcaption>
           </figure>
         </div>
-        <h3>Backend Development</h3>
+        <h3>Web Development</h3>
         <div>
           <figure>
             <img
@@ -347,9 +449,6 @@
             />
             <figcaption>Jest</figcaption>
           </figure>
-        </div>
-        <h3>Frontend Development</h3>
-        <div>
           <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
@@ -413,7 +512,38 @@
             <figcaption>Testing Library</figcaption>
           </figure>
         </div>
-        <h3>Other Tools</h3>
+        <h3>Data Analytics and Engineering</h3>
+        <div>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg"
+            />
+            <figcaption>PostgreSQL</figcaption>
+          </figure>
+          <figure>
+            <img src="assets/BigQuery-512-color.svg" />
+            <figcaption>BigQuery</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pandas/pandas-original.svg"
+            />
+            <figcaption>Pandas</figcaption>
+          </figure>
+          <figure>
+            <img src="assets/dbt-bit-standalone.png" />
+            <figcaption>dbt</figcaption>
+          </figure>
+          <figure>
+            <img src="assets/Looker-512-color.svg" />
+            <figcaption>Looker Studio</figcaption>
+          </figure>
+          <figure>
+            <img src="assets/Kestra.monogram.logo.svg" />
+            <figcaption>Kestra</figcaption>
+          </figure>
+        </div>
+        <h3>DevOps</h3>
         <div>
           <figure>
             <img
@@ -423,67 +553,27 @@
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pandas/pandas-original.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linux/linux-original.svg"
             />
-            <figcaption>Pandas</figcaption>
+            <figcaption>Linux</figcaption>
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/matplotlib/matplotlib-original.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg"
             />
-            <figcaption>Matplotlib</figcaption>
+            <figcaption>Docker</figcaption>
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/scikitlearn/scikitlearn-original.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/terraform/terraform-original.svg"
             />
-            <figcaption>scikit-learn</figcaption>
+            <figcaption>Terraform</figcaption>
           </figure>
           <figure>
             <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/numpy/numpy-original.svg"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/googlecloud/googlecloud-original.svg"
             />
-            <figcaption>NumPy</figcaption>
-          </figure>
-          <figure>
-            <img src="assets/logo-mark-lightbg.svg" />
-            <figcaption>Seaborn</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tensorflow/tensorflow-original.svg"
-            />
-            <figcaption>TensorFlow</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/keras/keras-original.svg"
-            />
-            <figcaption>Keras</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/opencv/opencv-original.svg"
-            />
-            <figcaption>OpenCV</figcaption>
-          </figure>
-          <figure>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eslint/eslint-original.svg"
-            />
-            <figcaption>ESLint</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/prettier-logo_svgstack_com_29071750945628.svg" />
-            <figcaption>Prettier</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/v2-7a8ee7eb8cc95edc8b304c2bb1fab75c_ipico.png" />
-            <figcaption>date-fns</figcaption>
-          </figure>
-          <figure>
-            <img src="./assets/PubSubJS.png" />
-            <figcaption>PubSubJS</figcaption>
+            <figcaption>Google Cloud</figcaption>
           </figure>
         </div>
       </section>
@@ -499,7 +589,9 @@
             alt=""
           />
         </h2>
-        <p class="my-3 text-xl lg:ml-15">A software engineer from Indonesia</p>
+        <p class="mx-3 my-3 text-xl lg:ml-15">
+          A software and data engineer from Indonesia
+        </p>
         <article
           class="mt-[20px] justify-self-stretch lg:row-span-full lg:mt-[60px]"
         >
@@ -565,8 +657,7 @@
       <p
         class="contact-button bg-slate-500 py-1.5 text-xs lg:py-3 lg:text-base"
       >
-        Copyright &copy; gofhilman 2025 | The code for this website is open
-        source.
+        &copy; 2026 Hilman Fikry | The code for this website is open source.
         <a
           href="https://github.com/gofhilman/homepage"
           target="_blank"
