fix: update project links

--- a/src/template.html
+++ b/src/template.html
@@ -156,7 +156,7 @@
             </div>
             <div>
               <a
-                href="https://shopping-cart-b3g.pages.dev/"
+                href="https://stacked-stories.pages.dev/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
@@ -166,7 +166,7 @@
                 </div>
               </a>
               <a
-                href="https://github.com/gofhilman/shopping-cart"
+                href="https://github.com/gofhilman/blog-api"
                 target="_blank"
                 rel="noopener noreferrer"
               >
