feat: add more tools

--- a/src/template.html
+++ b/src/template.html
@@ -444,6 +444,16 @@
             <figcaption>EJS</figcaption>
           </figure>
           <figure>
+            <img src="assets/curl-symbol.svg" />
+            <figcaption>cURL</figcaption>
+          </figure>
+          <figure>
+            <img
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postman/postman-original.svg"
+            />
+            <figcaption>Postman</figcaption>
+          </figure>
+          <figure>
             <img
               src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jest/jest-plain.svg"
             />
