feat: add blog and replace project

--- a/src/template.html
+++ b/src/template.html
@@ -83,22 +83,12 @@
               <div class="embla__viewport">
                 <div class="embla__container">
                   <img
-                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174339_tjeccf.png"
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1772286862/Screenshot_2026-02-28_205358_f4vftg.png"
                     alt=""
                     class="embla__slide"
                   />
                   <img
-                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174514_c8c4mg.png"
-                    alt=""
-                    class="embla__slide"
-                  />
-                  <img
-                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174222_g0xaa5.png"
-                    alt=""
-                    class="embla__slide"
-                  />
-                  <img
-                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1771238794/Screenshot_2026-02-16_174255_vks9ue.png"
+                    src="https://res.cloudinary.com/dwyzndpyq/image/upload/v1772286886/Screenshot_2026-02-28_205240_zxc6qk.png"
                     alt=""
                     class="embla__slide"
                   />
@@ -117,14 +107,13 @@
                 />
               </div>
             </div>
-            <h4>Blog API</h4>
+            <h4>Photo Tagging App</h4>
             <p>
-              Blog API is a fullstack blog application built from scratch. It
-              consists of a back end serving as the Content Management System
-              (CMS) and two frontend Single Page Applications (SPAs): the blog
-              itself and an admin dashboard for managing the blog. The
-              application focuses on core features while maintaining a polished
-              and minimalist design.
+              A hidden-object web game inspired by photo tagging mechanics,
+              built around Gus Morais' Mortal Kombat artwork. It combines simple
+              click-to-tag play with backend validation, session persistence via
+              JWT, and a leaderboard for fastest runs, offering a lightweight
+              but competitive experience.
             </p>
             <div class="project-tools">
               <div><i class="devicon-nodejs-plain"></i> Node.js</div>
@@ -132,13 +121,6 @@
               <div><i class="devicon-postgresql-plain"></i> PostgreSQL</div>
               <div><i class="devicon-prisma-original"></i> Prisma ORM</div>
               <div><i class="devicon-passport-plain"></i> Passport.js</div>
-              <div class="center-icon">
-                <img
-                  class="white-icon"
-                  src="./assets/cloudinary-free-logo_svgstack_com_28081766118907.svg"
-                  alt="Icon"
-                />Cloudinary
-              </div>
               <div><i class="devicon-reactrouter-plain"></i> React Router</div>
               <div><i class="devicon-react-original"></i> React</div>
               <div>
@@ -156,7 +138,7 @@
             </div>
             <div>
               <a
-                href="https://stacked-stories.pages.dev/"
+                href="https://where-s-scorpion.pages.dev/"
                 target="_blank"
                 rel="noopener noreferrer"
               >
@@ -166,7 +148,7 @@
                 </div>
               </a>
               <a
-                href="https://github.com/gofhilman/blog-api"
+                href="https://github.com/gofhilman/where-s-scorpion"
                 target="_blank"
                 rel="noopener noreferrer"
               >
@@ -611,6 +593,16 @@
               <a href="mailto:hilman12fikry@gmail.com">
                 <img src="./assets/email.svg" alt="Logo" />
                 <p>Email</p>
+              </a>
+            </article>
+            <article>
+              <a
+                href="https://stacked-stories.pages.dev/"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="./assets/rss.svg" alt="Logo" />
+                <p>Blog</p>
               </a>
             </article>
             <article>
